@@ -23,6 +23,7 @@
 package org.gjt.sp.jedit.io;
 
 //{{{ Imports
+import javax.annotation.Nonnull;
 import javax.swing.JOptionPane;
 import java.awt.Component;
 import java.awt.EventQueue;
@@ -84,6 +85,43 @@ public class VFSManager
 
 	//{{{ VFS methods
 
+	//{{{ canReadFile() method
+	/**
+	 * Returns true if the file exists
+	 * @param path the path of the file
+	 * @return true if the file exists and can be read
+	 * @since jEdit 5.6pre1
+	 */
+	public static boolean canReadFile(String path)
+	{
+		VFS vfs = VFSManager.getVFSForPath(path);
+		Object vfsSession = vfs.createVFSSession(path, jEdit.getActiveView());
+		if (vfsSession == null)
+			return false;
+
+		try
+		{
+			VFSFile vfsFile = vfs._getFile(vfsSession, path, jEdit.getActiveView());
+			return vfsFile != null && vfsFile.isReadable() && vfsFile.getType() == VFSFile.DIRECTORY;
+		}
+		catch (IOException e)
+		{
+			Log.log(Log.ERROR, VFSManager.class, e, e);
+		}
+		finally
+		{
+			try
+			{
+				vfs._endVFSSession(vfsSession, jEdit.getActiveView());
+			}
+			catch (IOException e)
+			{
+				Log.log(Log.ERROR, VFSManager.class, e, e);
+			}
+		}
+		return false;
+	} //}}}
+
 	//{{{ getFileVFS() method
 	/**
 	 * Returns the local filesystem VFS.
@@ -110,6 +148,7 @@ public class VFSManager
 	 * @param protocol The protocol
 	 * @since jEdit 2.5pre1
 	 */
+	@Nonnull
 	public static VFS getVFSForProtocol(String protocol)
 	{
 		if(protocol.equals("file"))
@@ -131,6 +170,7 @@ public class VFSManager
 	 * @param path The path
 	 * @since jEdit 2.6pre4
 	 */
+	@Nonnull
 	public static VFS getVFSForPath(String path)
 	{
 		if(MiscUtilities.isURL(path))
