@@ -74,6 +74,8 @@ Alan Ezust, and Dale Anson for contributing to this release.
 }}}
 {{{ API Changes
 
+- New Method VFSManager.canReadFile(path) (Matthieu Casanova)
+
 - New method IntegerArray.isEmpty() (Matthieu Casanova)
 
 }}}
